Fixed border size between bar and window being too large

--- a/.config/wal/templates/waybar.css
+++ b/.config/wal/templates/waybar.css
@@ -13,7 +13,7 @@ tooltip {{
 }}
 
 .module {{
-	margin: 4px 0 4px 0;
+	margin-top: 4px;
 	background: {background};
 	border-radius: 15px;
 	padding: 0 9px 0 9px;
